[package]
name = "dust-up"
version = "0.1.0"
description = "Docker environment composition"
authors = ["Ken Valencik <kvalencik@underarmour.com>"]

[dependencies]
clap = "2"
error-chain = "0.11"
futures = "0.1"
hyper = "0.11"
hyperlocal = "0.4"
hyper-openssl = "0.4"
openssl = "0.10"
serde = "1"
serde_json = "1"
serde_yaml = "0.7"
tar = "0.4"
term_size = "0.3"
termios = "0.3"
tokio-core = "0.1"
tokio-signal = "0.1"
url = "1.6.0"
